# OWL_Sorting

owl_gazebo/: setup.cfg
owl_gazebo/launch/: sim.launch.py
owl_gazebo/urdf/: gazebo_plugins.xacro  sim_gazebo.xacro
owl_gazebo/world/: table.world
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/owl_cv/: package.xml  setup.cfg  setup.py
ros2_ws/src/owl_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/owl_gazebo/: package.xml  setup.py
ros2_ws/src/owl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_wk/devel/: .catkin  .rosinstall
ros_wk/src/owl_robot/: CMakeLists.txt
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/src/: package.xml
ros_ws/src/moveit_pkgs/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/moveit_pkgs/config/: fake_controllers.yaml  gazebo_owl_robot.urdf  ompl_planning.yaml  owl_robot.srdf  stomp_planning.yaml
ros_ws/src/moveit_pkgs/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ros_ws/src/moveit_pkgs/owl_moveit_bringup/launch/: bringup.launch
ros_ws/src/owl_description/: CMakeLists.txt
(+157 files in other folders)
